tests/baselines/reference/instantiateTypeParameter.errors.txt
tests/cases/compiler/instantiateTypeParameter.ts(2,5): error TS1131: Property or signature expected.
tests/cases/compiler/instantiateTypeParameter.ts(2,12): error TS2304: Cannot find name 'T'.
tests/cases/compiler/instantiateTypeParameter.ts(3,1): error TS1128: Declaration or statement expected.


==== tests/cases/compiler/instantiateTypeParameter.ts (3 errors) ====
    interface Foo<T> {
        var x: T<>;
        ~~~
!!! error TS1131: Property or signature expected.
               ~
!!! error TS2304: Cannot find name 'T'.
    }
    ~
!!! error TS1128: Declaration or statement expected.